@@ -2120,7 +2120,7 @@ try this wash."
   "Translate many Unicode characters into their ASCII equivalents."
   (interactive)
   (require 'org-entities)
-  (let ((table (make-char-table nil)))
+  (let ((table (make-char-table (if (featurep 'xemacs) 'generic))))
     (dolist (elem org-entities)
       (when (and (listp elem)
 		 (= (length (nth 6 elem)) 1))
@@ -2132,7 +2132,9 @@ try this wash."
 	(let ((inhibit-read-only t)
 	      replace)
 	  (while (not (eobp))
-	    (if (not (setq replace (aref table (following-char))))
+	    (if (not (setq replace (if (featurep 'xemacs)
+				       (get-char-table (following-char) table)
+				     (aref table (following-char)))))
 		(forward-char 1)
 	      (delete-char 1)
 	      (insert replace))))))))
